# 2324-4bhif-syp-project-franklyn

./: .gitignore  README.adoc  index.html  local-convert.sh  multitest.html  publish.sh  setup.html
.github/workflows/: build-and-release.yaml  build-docker.yaml  build-openbox.yaml  build.yaml  ci.yaml  deploy-to-oravm.yaml  docs.yaml  release.yaml
additional-documentation/: youtrack-diagram-by-stefnotch.html
asciidocs/: index.adoc
asciidocs/docs/: index.adoc  multitest.adoc  setup.adoc
asciidocs/mom/: 2023-10-17.adoc
asciidocs/scripts/: docker-convert-util.sh
asciidocs/slides/: index.adoc  slide.adoc
cicd/: build-instructor-client.sh  build-openbox.sh  build-recorder.sh  build-server.sh  build.sh  daemon.json  docker-compose.yaml  nginx.conf  prod-patch-instructor-client.sh  prod-patch-openbox.sh  prod-patch-recorder.sh  setup-ssh.sh
client/: README.md  pom.xml
instructor-client/: .gitignore  README.md  angular.json  instructor-start.sh  package-lock.json  package.json  pom.xml  tsconfig.json
mom/: 2023-10-17.html  2023-11-07.html  2023-11-21.html  2023-12-12.html  2024-01-09.html  2024-01-30.html  2024-02-06.html  2024-02-13.html  2024-02-27.html  2024-03-12.html  2024-04-02.html  2024-04-23.html  2024-06-04.html  2024-10-01.html  2024-10-08.html  2024-10-11.html  2024-10-25.html
nginx/: index.html  nginx.conf
openbox/: .env  .gitignore  Cargo.toml  openbox-start.sh  pom.xml
openbox/src/: lib.rs  main.rs  ws.rs
openbox/src/main/docker/: Dockerfile.legacy-jar  Dockerfile.native
openbox/src/main/java/at/htl/franklyn/boundary/: Client.java  ScreenshotResource.java
openbox/src/main/java/at/htl/franklyn/boundary/Dto/: IpMessageDto.java
openbox/src/main/java/at/htl/franklyn/boundary/dto/: MessageDto.java
openbox/src/main/java/at/htl/franklyn/control/: AppLifecycleBean.java  HeartbeatBean.java  InitBean.java
openbox/src/main/java/at/htl/franklyn/services/: ConnectionService.java  IpService.java  ReconnectService.java  ScreenshotService.java  ScreenshotUploadService.java  UserService.java
openbox/src/main/resources/: application.properties  openbox-banner.txt
openbox/src/theme/: logo.rs  mod.rs
plantuml/: franklyn-ucd.puml
recorder/: .gitignore  README.md  pom.xml  recorder-start.sh  test.sh
scripts/: docker-convert.sh
server/: .env  .gitignore  README.md  docker-compose.yaml  pom.xml  server-start.sh
slides/: index.html
status-reports/: 2024-10-07-status-report.html
(+286 files in other folders)
