[package]
name = "openbox"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["multipart"] }
xcap = "0.0.9"
image = "0.25.1"
iced = { version = "0.12.1", features = ["tokio"] }
futures = "0.3.30"
async-tungstenite = { version = "0.25.1", features = ["tokio-rustls-webpki-roots"] }
tokio = { version = "1.37.0", features = ["time"] }
